objects/Inclusion_Details__c.object
<CustomObject>
    <fields>
        <fullName>Food_allergies_status__c</fullName>
        <formula>IF(
ISPICKVAL( Food_allergies_CCT_notes__c , &quot;OK (AC)&quot;)
,
&quot;OK&quot;,
IF(
AND(
ISPICKVAL( Epi_pen_for_food_allergy__c , &quot;Yes&quot;),
ISPICKVAL( Agree_to_food_epi_pen_consent__c , &quot;I agree&quot; )
)
,&quot;CHECK - CONSENT RECEIVED. FINAL CHECKS&quot;,
IF(
ISPICKVAL( Food_allergies_CCT_notes__c , &quot;OK (Inclusion letter sent)&quot;),
&quot;CHECK - LETTER SENT&quot;,
IF(ISPICKVAL( Severity_of_food_allergy__c , &quot;Severe&quot;),
&quot;CHECK&quot;,
IF(
ISPICKVAL( Epi_pen_for_food_allergy__c , &quot;Yes&quot;),
&quot;CHECK - PLEASE SEND INCLUSION LETTER&quot;,
IF(
AND(
OR(
ISPICKVAL(  How__c , &quot;tracers of the allergic item when touched&quot;),
ISPICKVAL(  How__c , &quot;airbourne particles/when the allergic item is in the environment&quot;)
),
OR(
NOT(ISPICKVAL(Food_allergies_CCT_notes__c ,&quot;OK (CCT checked)&quot;)),
NOT(ISPICKVAL(Food_allergies_CCT_notes__c ,&quot;OK (CCT called)&quot;))
)
)
,&quot;CHECK&quot;,

IF( ISNULL(Food_allergies__c),&quot;CHECK&quot;, 

&quot;OK&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food allergy status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_allergy_details_paper_form__c</fullName>
        <label>Food allergy details (paper form)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Free_school_meals__c</fullName>
        <label>Free school meals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_fainting_attacks__c</fullName>
        <label>Frequency of fainting attacks</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_seizures__c</fullName>
        <label>Frequency of seizures</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fridge_for_Diabetes_Medication__c</fullName>
        <label>Fridge for Diabetes Medication?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Skin_Condition_Details__c</fullName>
        <label>Further Skin Condition Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_details_of_Drs_treatment__c</fullName>
        <label>Further details of Drs treatment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_details_of_other_lung_conditions__c</fullName>
        <label>Further details of other lung conditions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_info_on_legal_guardian__c</fullName>
        <label>Further info on legal guardian</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_Address__c</fullName>
        <label>GP Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GP_CCT_notes__c</fullName>
        <label>GP CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Name__c</fullName>
        <label>GP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_Telephone__c</fullName>
        <label>GP Telephone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_status__c</fullName>
        <formula>IF(OR(
GP_Name__c =&quot;&quot;,
GP_Telephone__c = &quot;&quot;
)
, &quot;CHECK&quot;, &quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_identity_same_as_biological_sex__c</fullName>
        <label>Gender id different to biological sex?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Setting_Guide__c</fullName>
        <label>Goal Setting Guide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plain Text</fullName>
                </value>
                <value>
                    <fullName>Widgits</fullName>
                </value>
                <value>
                    <fullName>No Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_the_young_person_ever_self_harmed__c</fullName>
        <label>Has the young person ever self harmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_injury_CCT_notes__c</fullName>
        <label>Head injury CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_injury_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL( Any_head_injuries__c ,&quot;&quot;),
ISPICKVAL( Any_head_injuries__c ,&quot;Yes&quot;)
),
OR(
ISPICKVAL( Head_injury_CCT_notes__c , &quot;&quot;),ISPICKVAL( Head_injury_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( Head_injury_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head injury status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_impairment_CCT_notes__c</fullName>
        <label>Hearing impairment CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_impairment__c</fullName>
        <label>Hearing impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_impairment_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL( Hearing_impairment__c , &quot;&quot;),
ISPICKVAL( Hearing_impairment__c , &quot;Yes&quot;)
),
OR(
ISPICKVAL( Hearing_impairment_CCT_notes__c ,&quot;&quot;),
ISPICKVAL( Hearing_impairment_CCT_notes__c ,&quot;CHECK&quot;),
ISPICKVAL( Hearing_impairment_CCT_notes__c ,&quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hearing impairment status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heart_blood_problems__c</fullName>
        <label>Heart/blood problems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Angina</fullName>
                </value>
                <value>
                    <fullName>High or low blood pressure</fullName>
                </value>
                <value>
                    <fullName>Hole in heart</fullName>
                </value>
                <value>
                    <fullName>Heart murmur</fullName>
                </value>
                <value>
                    <fullName>Heart trouble</fullName>
                </value>
                <value>
                    <fullName>Raised blood pressure</fullName>
                </value>
                <value>
                    <fullName>Other Heart condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Higher_SL_complete_by_agent__c</fullName>
        <label>Higher SL complete by agent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Higher_SL_reviewed_by_manager__c</fullName>
        <label>Higher SL reviewed by manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Higher_Support_Level_Reached__c</fullName>
        <label>Higher Support Level Reached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History_of_Seizures__c</fullName>
        <label>History of Seizures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Black Outs</fullName>
                </value>
                <value>
                    <fullName>Fainting Attacks</fullName>
                </value>
                <value>
                    <fullName>Seizures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_self_harm__c</fullName>
        <label>History of self harm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Occurred more than one year ago</fullName>
                </value>
                <value>
                    <fullName>Recent (occurred within the last year)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_substance_abuse__c</fullName>
        <label>History of substance abuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How__c</fullName>
        <description>When allergic reaction occur with food</description>
        <label>When allergic reaction occur with food</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airbourne particles/when the allergic item is in the environment</fullName>
                </value>
                <value>
                    <fullName>Traces of the allergic item when touched</fullName>
                </value>
                <value>
                    <fullName>ONLY when eaten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_migraines_occur__c</fullName>
        <label>How often migraines occur</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Care_CCT_notes__c</fullName>
        <label>In Care CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_care_status__c</fullName>
        <formula>IF(
AND( 
OR(
ISPICKVAL( YP_in_or_recently_in_care__c , &quot;&quot;),
ISPICKVAL( YP_in_or_recently_in_care__c , &quot;Yes&quot;)
),
OR(
ISPICKVAL( In_Care_CCT_notes__c , &quot;&quot;),ISPICKVAL( In_Care_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( In_Care_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In care status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inclusion_Set_1_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inclusion Set 1 complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inclusion_Set_2_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inclusion Set 2 complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inclusion_call_back_complete__c</fullName>
        <label>Inclusion call back complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inclusion_comms_requested_to_send__c</fullName>
        <inlineHelpText>To make these letters a daily task (i.e. requested whenever but all run in unison at a different time), these values will be used to track which Comms need to be sent. Once sent, the equivalent date fields for each value need to be populated.</inlineHelpText>
        <label>Inclusion comms requested to send</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anaemia comm</fullName>
                </value>
                <value>
                    <fullName>APL hold medication consent</fullName>
                </value>
                <value>
                    <fullName>Consent only form</fullName>
                </value>
                <value>
                    <fullName>Diabetes comm</fullName>
                </value>
                <value>
                    <fullName>Doctor&apos;s note</fullName>
                </value>
                <value>
                    <fullName>Emergency medication consent</fullName>
                </value>
                <value>
                    <fullName>Epi Pen follow up</fullName>
                </value>
                <value>
                    <fullName>Inclusion call back comm</fullName>
                </value>
                <value>
                    <fullName>Inclusion no response comm</fullName>
                </value>
                <value>
                    <fullName>MASI &amp; consent only form</fullName>
                </value>
                <value>
                    <fullName>Missing GP details comm</fullName>
                </value>
                <value>
                    <fullName>Phone consent follow-up</fullName>
                </value>
                <value>
                    <fullName>Specialist&apos;s note</fullName>
                </value>
                <value>
                    <fullName>Stomach bowel and abdominal comm</fullName>
                </value>
                <value>
                    <fullName>SW hold medication consent</fullName>
                </value>
                <value>
                    <fullName>YP in care letter to social workers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inclusion_no_response_letter_email_sent__c</fullName>
        <inlineHelpText>This is manually updated when a letter is run or an email is successfully triggered.</inlineHelpText>
        <label>Inclusion no response letter/email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Infectious_disease_CCT_notes__c</fullName>
        <label>Infectious disease CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infectious_disease_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL( Any_infectious_dieseases__c ,&quot;&quot;),
ISPICKVAL( Any_infectious_dieseases__c ,&quot;Yes&quot;)
),
OR(
ISPICKVAL( Infectious_disease_CCT_notes__c ,&quot;&quot;),ISPICKVAL( Infectious_disease_CCT_notes__c ,&quot;CHECK&quot;),ISPICKVAL( Infectious_disease_CCT_notes__c ,&quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infectious disease status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injury_CCT_notes__c</fullName>
        <label>Injury CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Injury_status__c</fullName>
        <formula>IF (ISPICKVAL (Is_the_injury_fully_healed__c, &quot;Ongoing&quot;), &quot;CHECK&quot;, 
IF( INCLUDES (YP_injuries__c, &quot;None&quot;),&quot;OK&quot;, 
IF( AND( OR( 
ISNULL( YP_injuries__c ), 
ISPICKVAL( Any_ongoing_weakness_risk__c ,&quot;YES&quot;), 
ISPICKVAL( Is_the_injury_fully_healed__c ,&quot;No&quot;), 
AND( NOT(ISNULL( YP_injuries__c )), 
ISPICKVAL( Is_the_injury_fully_healed__c ,&quot;&quot; ),ISPICKVAL( Any_ongoing_weakness_risk__c , &quot;&quot;))), 
OR( ISPICKVAL( Injury_CCT_notes__c , &quot;&quot;),ISPICKVAL( Injury_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( Injury_CCT_notes__c , &quot;CALL&quot;))),&quot;CHECK&quot;,&quot;OK&quot;)))</formula>
        <label>Injury status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inlusion_letter_sent__c</fullName>
        <label>Date inclusion letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_YP_fluent_in_English__c</fullName>
        <label>Is YP fluent in English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_YP_fully_recovered__c</fullName>
        <label>Dr treatment fully recovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_head_injury_fully_recovered__c</fullName>
        <label>Is head injury fully recovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_YP_pregnant__c</fullName>
        <label>Is the YP pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Yes, confirmed pregnancy</fullName>
                </value>
                <value>
                    <fullName>Suspected pregnancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_injury_fully_healed__c</fullName>
        <label>Is the injury fully healed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_an_ongoing_condition__c</fullName>
        <label>Dr treatment an ongoing condition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_worker_name__c</fullName>
        <label>Key worker name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_SW_1_Email__c</fullName>
        <label>Known SW 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Known_SW_1_Name__c</fullName>
        <label>Known SW 1 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Known_SW_1_Phone__c</fullName>
        <label>Known SW 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Known_SW_2_Email__c</fullName>
        <label>Known SW 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Known_SW_2_Name__c</fullName>
        <label>Known SW 2 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Known_SW_2_Phone__c</fullName>
        <label>Known SW 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Known_SW_address_Check__c</fullName>
        <formula>IF( OR(
 AND( ISPICKVAL(SW_Required__c , &quot;Yes, YP has known SW – Staffing to review&quot;) , NOT( ISBLANK(Known_SW_1_Name__c) ) ,OR( NOT( ISBLANK(Known_SW_1_Email__c) ),  NOT( ISBLANK( Known_SW_1_Phone__c ) ) ) , OR( ISPICKVAL(Support_Level__c , &quot;5.1 - full-time support worker required&quot;) , ISPICKVAL(Support_Level__c , &quot;5.05 - support worker required, can share with another YP&quot;) ) ) ,
 AND( ISPICKVAL(SW_Required__c , &quot;Yes, YP has known SW – Staffing to review&quot;) , ISPICKVAL( Support_Level__c , &quot;5.2 - requires 2 full time support workers&quot;) , NOT( ISBLANK( Known_SW_2_Name__c ) ) , OR(NOT( ISBLANK( Known_SW_2_Email__c ) ),  NOT( ISBLANK( Known_SW_2_Phone__c ) ) ) ) ) , 

&quot;OK&quot;, &quot;Check&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Known SW address Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Support_Worker_Email_Sent__c</fullName>
        <label>Known Support Worker Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Known_triggers_for_migraines__c</fullName>
        <label>Known triggers for migraines</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_fainting_attack__c</fullName>
        <label>Last fainting attack</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_modified_by_website_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Records the user who last modified the record when using The Challenge website to update records</inlineHelpText>
        <label>Last modified by website user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inclusion_Detail_updated_as_Website_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_name_letters_dupe_checking__c</fullName>
        <formula>LEFT( Contact__r.LastName , 1)</formula>
        <label>Last name letters (dupe checking)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_time_of_seizure__c</fullName>
        <label>Last time of seizure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>IF(OR( ISPICKVAL(Contact__r.LeadSource ,&quot;School paper form (Marketing)&quot;),
ISPICKVAL(Contact__r.LeadSource ,&quot;Received by post (CO)&quot;)
)
,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <label>Is Paper Source?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_difficulties_CCT_notes__c</fullName>
        <label>Learning difficulties CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_difficulties_status__c</fullName>
        <formula>IF(
AND(
OR(
ISNULL( Other_learning_difficulties__c),
NOT(INCLUDES( Other_learning_difficulties__c , &quot;None&quot;)),
ISPICKVAL( Severity_of_dyslexia__c , &quot;Moderate&quot;),
ISPICKVAL( Severity_of_dyslexia__c , &quot;Severe&quot;)
)
,
OR(
ISPICKVAL( Learning_difficulties_CCT_notes__c , &quot;&quot;),
ISPICKVAL( Learning_difficulties_CCT_notes__c , &quot;CHECK&quot;),
ISPICKVAL( Learning_difficulties_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning difficulties status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Guardian_CCT_notes__c</fullName>
        <label>Legal Guardian CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Guardian_Telephone__c</fullName>
        <label>Legal Guardian Telephone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Guardian_status__c</fullName>
        <formula>IF(
AND( 
OR(
ISPICKVAL(  Are_you_the_legal_guardian__c  , &quot;&quot;),
ISPICKVAL(  Are_you_the_legal_guardian__c  , &quot;No&quot;)
),
OR(
ISPICKVAL(  Legal_Guardian_CCT_notes__c  , &quot;&quot;),ISPICKVAL( Legal_Guardian_CCT_notes__c , &quot;CHECK&quot;),ISPICKVAL( Legal_Guardian_CCT_notes__c , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Guardian status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_guardian_call_back_time__c</fullName>
        <label>Legal guardian call back time</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9am-1pm</fullName>
                </value>
                <value>
                    <fullName>1pm-5pm</fullName>
                </value>
                <value>
                    <fullName>5pm - 7pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_English__c</fullName>
        <label>Level of English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Speaks fluent English</fullName>
                </value>
                <value>
                    <fullName>Speaks and understands English to a good level</fullName>
                </value>
                <value>
                    <fullName>Speaks and understands English to a basic level</fullName>
                </value>
                <value>
                    <fullName>Young person does not speak English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>